# HousdorffHDF5cMake

./: BiggerMainFunctions.cu  BoolKernelTests.cu  BoolVolume.h  CMakeLists.txt  CPUAllocations.cu  CooperativeGroupsUtils.cu  DilatationKernels.cu  ExceptionManagUtils.cu  FirstMetaDataPassTest.cu  FirstMetaPass.cu  ForBoolKernel.cu  IterationUtils.cu  MainCUDA.cu  MainKernelMetaHelpers.cu  MainPassFunctions.cu  MainPassesKernels.cu  MemoryTransfers.cu  MetaData.cu  MetaDataOtherPasses.cu  MinMaxesKernel.cu  README.md  Structs.cu  UnitTestUtils.cu  dirent.h  hello.cu  pielineTest.cu  testAll.cu  testData.cu  testMainPassesKernels.cu
forBench/: HausdorffDistance.cu  HausdorffDistance.cuh  Volume.h  hdf5Manag.cu
old/: IterationUtils.cu  ReductionUtils.cu  pielineTest.cu  testData.cu  testMainPassesKernels.cu
